[package]
name = "gba-sdk-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gba-minrt = { path = "..", features = ["panic"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
